# recommendation-algo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
src/: main.rs
src/recommendor/: controller.rs  mod.rs  models.rs  service.rs
